--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,14 @@
+/* NAVBAR */
+.navbar-nav {
+  margin: 3rem;
+  padding-bottom: 2rem;
+}
+
 .navbar-brand {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 2.5rem !important;
   margin-left: 10.5rem;
   color: #3858d6 !important;
-}
-
-.navbar-nav{
-  margin: 3rem;
-  padding-bottom: 2rem;
 }
 
 .nav-item {
@@ -18,4 +19,88 @@
   margin-right: 6rem;
   border-radius: .5rem !important;
   padding: 1rem 2.5rem 1rem 2.5rem !important;
+}
+
+/* CARD */
+
+.card-title-custom {
+  padding: 5rem 5rem 1rem 9rem;
+  text-align: left;
+  font-size: 6rem;
+  color: #1f3e72;
+  font-weight: bold;
+}
+
+.card-text-custom {
+  padding: 1rem 10rem 1rem 9rem;
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
+/* ICON */
+
+.icon-text {
+  padding-left: 3rem;
+  font-size: .7rem;
+  font-weight: 500;
+  margin-right: 8rem;
+  padding-left: 11rem;
+
+}
+
+
+.f-icon-shield {
+  color: #ffd012;
+  font-size: 1.5rem !important;
+
+}
+
+.f-icon-star {
+  color: #ffd012;
+  font-size: 1.5rem !important;
+}
+
+.f-icon-check {
+  color: #ffffff;
+}
+
+/* FOOTER */
+
+.footer-title {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 2.5rem !important;
+  margin-left: 1rem;
+  color: #3858d6 !important;
+}
+
+.dropdown-form {
+  padding: 3rem 3rem 3rem 3rem;
+  width: 80rem;
+}
+
+.dropdown-btn-container {
+  padding-left: 11rem !important;
+}
+
+.dropdown-btn {
+  background-color: #e6ecff !important;
+  border-color: #ffffff !important;
+  border-radius: 10%;
+  margin-right: 1rem !important;
+}
+
+.dropdown-icon {
+  color: #3454d2;
+}
+
+.btn-icon-text {
+  display: inline-flex;
+}
+
+.dropdown-text {
+  margin-left: 3rem !important;
+}
+
+.dropdown-btn-sub {
+  padding: 1rem 3rem 1rem 3rem !important;
 }
