--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,24 @@
 }
 
 /* FOOTER */
+.footer-container {
+  background-color: #eef3ff;
+  padding-left: 9rem !important;
+  padding-right: 0rem !important;
+}
+
+.col-footer-subtitle {
+  color: #1f3e72 !important;
+  font-size: 2rem !important;
+  font-weight: bolder !important;
+  padding-bottom: 1.5rem !important;
+}
+
+.col-footer-text {
+  font-size: 1.5rem !important;
+  font-weight: 500 !important;
+
+}
 
 .footer-title {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
